# Library-Management-System

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
apps/accounts/: models.py  permissions.py  serializers.py  urls.py  views.py
apps/circulations/: apps.py
config/: settings.py  urls.py
config/settings/: base.py  development.py  production.py
